--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lib"
   ],
   "dependencies": {
+    "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git#latest",
     "draft-js": "^0.10.5",
     "draft-js-export-markdown": "^1.3.3",
     "draft-js-import-markdown": "^1.3.3",
