--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git#latest",
+    "@iziges/napper-scss": "ssh://git@github.com:sixertoy/napper-scss.git#latest",
     "draft-js": "^0.10.5",
     "draft-js-export-markdown": "^1.3.3",
     "draft-js-import-markdown": "^1.3.3",
