--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draft-js-import-markdown": "^1.3.3",
     "final-form": "^4.13.0",
     "final-form-focus": "^1.1.2",
+    "immutable": "3.x.x",
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^5.1.0"
   },
