--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/react": "^5.0.11",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.2.0",
@@ -47,6 +49,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.0",
     "husky": "^2.3.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
@@ -64,7 +67,8 @@
     "stylelint-scss": "^3.6.1"
   },
   "scripts": {
-    "test": "",
-    "build": "rollup -c"
+    "test": "jest",
+    "build": "rollup -c",
+    "storybook": "start-storybook -p 9002 -c .storybook"
   }
 }
