--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git#latest",
     "@iziges/napper-scss": "ssh://git@github.com:sixertoy/napper-scss.git#latest",
+    "babel-loader": "^7.0.0",
     "draft-js": "^0.10.5",
     "draft-js-export-markdown": "^1.3.3",
     "draft-js-import-markdown": "^1.3.3",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
@@ -55,6 +57,9 @@
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "prettier-stylelint": "^0.4.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rollup": "^1.12.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^10.0.0",
