--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iziges/napper-forms",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "React Form Components",
   "author": "Matthieu Lassalvy <sixertoy.github@gmail.com>",
   "license": "ISC",
@@ -37,6 +37,9 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
@@ -69,10 +72,7 @@
     "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.6.1",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11"
+    "stylelint-scss": "^3.6.1"
   },
   "scripts": {
     "test": "jest",
