--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git#latest",
-    "@iziges/napper-scss": "ssh://git@github.com:sixertoy/napper-scss.git#latest",
+    "@iziges/napper-styles": "ssh://git@github.com:sixertoy/napper-styles.git#latest",
     "babel-loader": "^7.0.0",
     "draft-js": "^0.10.5",
     "draft-js-export-markdown": "^1.3.3",
