--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "ISC",
   "main": "dist/bundle.min.js",
   "engines": {
-    "node": "^10.6.0"
+    "node": "^10.6.0 || ^12.13.1"
   },
   "files": [
     "dist",
     "lib"
   ],
   "dependencies": {
-    "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git#latest",
-    "@iziges/napper-styles": "ssh://git@github.com:sixertoy/napper-styles.git#latest",
+    "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git",
+    "@iziges/napper-styles": "ssh://git@github.com:sixertoy/napper-styles.git",
     "babel-loader": "^7.0.0",
     "draft-js": "^0.10.5",
     "draft-js-export-markdown": "^1.3.3",
@@ -77,8 +77,6 @@
   "scripts": {
     "test": "jest",
     "start": "rollup -c -w",
-    "build": "rollup -c",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build": "rollup -c"
   }
 }
