--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    ["@babel/preset-env"],
     ["@babel/preset-react", { "development": false }]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-class-properties"],
-    ["@babel/plugin-transform-runtime", { "useESModules": true }]
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-export-default-from",
+    ["module-resolver", { "alias": { "@iziges/napper-forms": "./src" } }]
   ]
 }
