--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,49 +1,41 @@
 {
-  "extends": ["react-app", "airbnb", "prettier", "prettier/react"],
-  "plugins": ["sort-destructure-keys"],
+  "extends": [
+    "react-app",
+    "airbnb",
+    "plugin:jsx-a11y/recommended",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": [
+    "jsx-a11y",
+    "prettier",
+    "simple-import-sort",
+    "import",
+    "sort-destructure-keys",
+    "sort-keys-fix"
+  ],
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
   "rules": {
-    "no-undef": [2, { "typeof": true }],
-    "jsx-a11y/label-has-for": 0,
-    "import/order": [
+    "simple-import-sort/sort": 2,
+    "sort-destructure-keys/sort-destructure-keys": 2,
+    "sort-imports": "off",
+    "sort-keys": ["error", "asc"],
+    "simple-import-sort/sort": 2,
+    "sort-imports": "off",
+    "sort-keys-fix/sort-keys-fix": 2,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-sort-props": [
       "error",
       {
-        "groups": [
-          ["builtin", "external"],
-          ["internal", "parent", "sibling", "index"]
-        ],
-        "newlines-between": "always"
-      }
-    ],
-    "import/no-extraneous-dependencies": [
-      "error",
-      { "devDependencies": ["**/*.test.js", "**/*.spec.js", "**/*.stories.js"] }
-    ],
-    "react/forbid-prop-types": [1, ["any", "array", "object"]],
-    "react/prop-types": [2, { "skipUndeclared": false }],
-    "react/jsx-filename-extension": [
-      2,
-      {
-        "extensions": [".js", ".jsx"]
-      }
-    ],
-    "sort-destructure-keys/sort-destructure-keys": [
-      2,
-      {
-        "caseSensitive": false
-      }
-    ],
-    "sort-keys": [
-      2,
-      "asc",
-      {
-        "caseSensitive": true,
-        "natural": false
-      }
-    ],
-    "sort-vars": [
-      2,
-      {
-        "ignoreCase": true
+        "callbacksLast": true,
+        "shorthandFirst": true,
+        "ignoreCase": true,
+        "noSortAlphabetically": false,
+        "reservedFirst": false
       }
     ]
   }
