--- a/package.json
+++ b/package.json
@@ -4,26 +4,23 @@
   "description": "React Form Components",
   "author": "Matthieu Lassalvy <sixertoy.github@gmail.com>",
   "license": "ISC",
-  "main": "dist/bundle.min.js",
+  "main": "lib/bundle.min.js",
   "engines": {
     "node": "^10.6.0 || ^12.13.1"
   },
   "files": [
-    "dist",
     "lib"
   ],
   "dependencies": {
-    "@iziges/napper-core": "ssh://git@github.com:sixertoy/napper-core.git",
-    "@iziges/napper-styles": "ssh://git@github.com:sixertoy/napper-styles.git",
-    "babel-loader": "^7.0.0",
-    "draft-js": "^0.10.5",
-    "draft-js-export-markdown": "^1.3.3",
-    "draft-js-import-markdown": "^1.3.3",
-    "final-form": "^4.13.0",
+    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
+    "add": "^2.0.6",
+    "draft-js": "^0.11.3",
+    "draft-js-export-markdown": "^1.4.0",
+    "draft-js-import-markdown": "^1.4.0",
     "final-form-focus": "^1.1.2",
-    "immutable": "3.x.x",
     "react-draft-wysiwyg": "^1.13.2",
-    "react-final-form": "^5.1.0"
+    "react-final-form": "^6.3.3",
+    "yarn": "^1.21.0"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
@@ -31,52 +28,38 @@
     "react-dom": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "cssnano": "^4.1.10",
+    "docsify": "^4.9.4",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "4.2.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.9.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.0",
-    "husky": "^2.3.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.1.7",
-    "prettier": "^1.17.1",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-simple-import-sort": "^4.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.3",
+    "eslint-plugin-sort-keys-fix": "^1.0.1",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
+    "prettier-eslint-cli": "^5.0.0",
     "prettier-stylelint": "^0.4.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "rollup": "^1.12.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "stylelint": "^10.0.1",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.6.1"
+    "rollup": "^1.27.8",
+    "rollup-plugin-sass": "^1.2.2",
+    "stylelint": "^12.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.13.0"
   },
   "scripts": {
     "test": "jest",
-    "start": "rollup -c -w",
-    "build": "rollup -c"
+    "dev": "NODE_ENV=development rollup -c -w",
+    "build": "rm -rf lib && NODE_ENV=production rollup -c",
+    "docs": "docsify serve docs --port 5000",
+    "prepare": "yarn build"
   }
 }
