--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "autoprefixer": "^9.7.3",
     "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
