--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "autoprefixer": "^9.7.3",
+    "babel-plugin-module-resolver": "^3.2.0",
     "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
     "eslint": "^5.16.0",
