--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,13 +26,15 @@
     "sort-keys": ["error", "asc"],
     "simple-import-sort/sort": 2,
     "sort-imports": "off",
-    "sort-keys-fix/sort-keys-fix": 2,
+    "sort-keys-fix/sort-keys-fix": ["error", "asc"],
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/jsx-sort-props": [
       "error",
       {
-        "callbacksLast": true,
+        "callbacksLast": false,
         "shorthandFirst": true,
+        "shorthandLast": false,
         "ignoreCase": true,
         "noSortAlphabetically": false,
         "reservedFirst": false
