--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "lib"
   ],
   "dependencies": {
-    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "add": "^2.0.6",
     "draft-js": "^0.11.3",
     "draft-js-export-markdown": "^1.4.0",
     "draft-js-import-markdown": "^1.4.0",
     "final-form-focus": "^1.1.2",
     "react-draft-wysiwyg": "^1.13.2",
-    "react-final-form": "^6.3.3",
-    "yarn": "^1.21.0"
+    "react-final-form": "^6.3.3"
   },
   "peerDependencies": {
+    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
