--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
   "files": [
     "lib"
   ],
-  "dependencies": {
+  "peerDependencies": {
+    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
+    "prop-types": "^15.7.2",
+    "react": ">=15",
     "draft-js": "^0.11.3",
     "draft-js-export-markdown": "^1.4.0",
     "draft-js-import-markdown": "^1.4.0",
     "final-form-focus": "^1.1.2",
     "react-draft-wysiwyg": "^1.13.2",
-    "react-final-form": "^6.3.3"
-  },
-  "peerDependencies": {
-    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-final-form": "^6.3.3",
+    "react-jss": "^10.0.0"
   },
   "devDependencies": {
+    "react-dom": "^16.8.6",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
