--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,6 @@
 {
-  "extends": [
-    "react-app",
-    "airbnb",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "prettier/react"
-  ],
+  "extends": ["airbnb", "prettier", "prettier/react"],
   "plugins": [
-    "jsx-a11y",
     "prettier",
     "simple-import-sort",
     "import",
@@ -20,15 +13,16 @@
     "node": true
   },
   "rules": {
-    "simple-import-sort/sort": 2,
-    "sort-destructure-keys/sort-destructure-keys": 2,
+    "prettier/prettier": "error",
+    "simple-import-sort/sort": "error",
+    "sort-destructure-keys/sort-destructure-keys": "error",
     "sort-imports": "off",
     "sort-keys": ["error", "asc"],
-    "simple-import-sort/sort": 2,
-    "sort-imports": "off",
     "sort-keys-fix/sort-keys-fix": ["error", "asc"],
-    "react/jsx-props-no-spreading": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/jsx-sort-props": "error"
+    "react/jsx-filename-extension": [
+      "error",
+      { "extensions": [".js", ".jsx"] }
+    ],
+    "react/jsx-props-no-spreading": "warn"
   }
 }
