--- a/package.json
+++ b/package.json
@@ -4,74 +4,37 @@
   "description": "React Form Components",
   "author": "Matthieu Lassalvy <sixertoy.github@gmail.com>",
   "license": "ISC",
-  "main": "lib/bundle.min.js",
+  "private": true,
+  "main": "./dist/bundle.min.js",
+  "module": "./lib/index.js",
+  "homepage": "https://github.com/sixertoy/napper-forms.git",
   "engines": {
     "node": "^10.6.0 || ^12.13.1"
   },
   "files": [
-    "lib"
+    "./lib",
+    "./dist"
   ],
-  "peerDependencies": {
-    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "draft-js": "^0.11.3",
-    "draft-js-export-markdown": "^1.4.0",
-    "draft-js-import-markdown": "^1.4.0",
-    "final-form-focus": "^1.1.2",
-    "prop-types": "^15.7.2",
-    "react": ">=15",
-    "react-draft-wysiwyg": "^1.13.2",
-    "react-final-form": "^6.3.3",
-    "react-jss": "^10.0.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-export-default-from": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "autoprefixer": "^9.7.3",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-flowtype": "^4.5.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-simple-import-sort": "^4.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.3.3",
-    "eslint-plugin-sort-keys-fix": "^1.0.1",
     "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "postcss": "^7.0.23",
-    "prettier": "^1.19.1",
-    "prettier-eslint": "^9.0.1",
-    "prettier-eslint-cli": "^5.0.0",
-    "prettier-stylelint": "^0.4.2",
-    "react-dom": "^16.8.6",
-    "rollup": "^1.27.8",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-size-snapshot": "^0.10.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "stylelint": "^12.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.13.0"
+    "lint-staged": "^9.5.0"
   },
   "scripts": {
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "test": "jest",
-    "dev": "NODE_ENV=development rollup -c -w",
-    "build": "rm -rf lib && NODE_ENV=production rollup -c",
-    "docs": "docsify serve docs --port 5000",
-    "prepare": "yarn build"
+    "dev": "rollup -c -w",
+    "build": "rm -rf lib && rollup -c",
+    "docs": "docsify serve docs --port 5000"
+  },
+  "dependencies": {
+    "jest": "^24.9.0"
   }
 }
