--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     ["@babel/preset-react", { "development": false }]
   ],
   "plugins": [
+    "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
     ["module-resolver", { "alias": { "@iziges/napper-forms": "./src" } }]
   ]
