--- a/package.json
+++ b/package.json
@@ -17,15 +17,54 @@
   ],
   "peerDependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "autoprefixer": "^9.7.3",
+    "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
+    "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.1.0",
-    "lint-staged": "^9.5.0"
+    "lint-staged": "^9.5.0",
+    "postcss": "^7.0.23",
+    "prettier": "^1.13.0",
+    "rollup": "^1.27.8",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-size-snapshot": "^0.10.0",
+    "rollup-plugin-terser": "^5.1.2"
+  },
+  "dependencies": {
+    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
+    "@iziges/napper-core-react": "https://github.com/sixertoy/napper-core-react.git",
+    "draft-js": "^0.10.x",
+    "draft-js-export-markdown": "^1.4.0",
+    "draft-js-import-markdown": "^1.4.0",
+    "final-form": "^4.16.1",
+    "final-form-focus": "^1.1.2",
+    "immutable": "3.x.x",
+    "jest": "^24.9.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-final-form": "^6.3.3",
+    "react-jss": "^10.0.0",
+    "react-sizes": "^2.0.0",
+    "theming": "^3.2.0",
+    "typescript": "^3.5.0"
   },
   "scripts": {
     "cleanup": "rm -rf node_modules && rm yarn.lock",
@@ -33,8 +72,5 @@
     "dev": "rollup -c -w",
     "build": "rm -rf lib && rollup -c",
     "docs": "docsify serve docs --port 5000"
-  },
-  "dependencies": {
-    "jest": "^24.9.0"
   }
 }
