--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^9.7.3",
+    "builtin-modules": "^3.1.0",
     "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
     "dotenv": "^8.2.0",
@@ -70,7 +71,8 @@
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "test": "jest",
     "dev": "rollup -c -w",
-    "build": "rm -rf lib && rollup -c",
-    "docs": "docsify serve docs --port 5000"
+    "build": "rm -rf lib && rollup -c --silent",
+    "docs": "docsify serve docs --port 5000",
+    "prepare": "yarn build"
   }
 }
