--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^9.7.3",
+    "babel-plugin-module-resolver": "^3.2.0",
     "builtin-modules": "^3.1.0",
     "cssnano": "^4.1.10",
     "docsify": "^4.9.4",
