--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "./lib",
     "./dist"
   ],
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
@@ -59,8 +62,6 @@
     "immutable": "3.x.x",
     "jest": "^24.9.0",
     "prop-types": "^15.7.2",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^6.3.3",
     "react-jss": "^10.0.0",
