update react version

--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "./dist"
   ],
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "prop-types": "^15.7.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-jss": "^10.0.0",
+    "react-sizes": "^2.0.0",
+    "theming": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -61,12 +65,8 @@
     "final-form-focus": "^1.1.2",
     "immutable": "3.x.x",
     "jest": "^24.9.0",
-    "prop-types": "^15.7.2",
     "react-draft-wysiwyg": "^1.13.2",
     "react-final-form": "^6.3.3",
-    "react-jss": "^10.0.0",
-    "react-sizes": "^2.0.0",
-    "theming": "^3.2.0",
     "typescript": "^3.5.0"
   },
   "scripts": {
