--- a/package.json
+++ b/package.json
@@ -12,26 +12,22 @@
     "node": "^10.6.0 || ^12.13.1"
   },
   "files": [
-    "./lib",
-    "./dist"
+    "./dist",
+    "./lib"
   ],
   "peerDependencies": {
-    "final-form": "^4.18.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-final-form": "^6.3.3",
-    "react-jss": "^10.0.0",
-    "react-sizes": "^2.0.0",
-    "theming": "^3.2.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-module-resolver": "^3.2.0",
     "builtin-modules": "^3.1.0",
     "cssnano": "^4.1.10",
@@ -45,10 +41,15 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "final-form": "^4.18.6",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "postcss": "^7.0.23",
     "prettier": "^1.13.0",
+    "prop-types": "^15.7.2",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-final-form": "^6.3.3",
     "rollup": "^1.27.8",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -60,20 +61,15 @@
   "dependencies": {
     "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
     "@iziges/napper-core-react": "https://github.com/sixertoy/napper-core-react.git",
-    "draft-js": "^0.10.x",
-    "draft-js-export-markdown": "^1.4.0",
-    "draft-js-import-markdown": "^1.4.0",
-    "final-form-focus": "^1.1.2",
-    "immutable": "3.x.x",
-    "jest": "^24.9.0",
-    "react-draft-wysiwyg": "^1.13.2",
-    "typescript": "^3.5.0"
+    "classnames": "^2.2.6",
+    "isemail": "^3.2.0"
   },
   "scripts": {
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "test": "jest",
     "dev": "rollup -c -w",
-    "build": "rm -rf lib && rollup -c --silent",
+    "prebuild": "rm -rf dist && rm -rf lib",
+    "build": "rollup -c --silent",
     "docs": "docsify serve docs --port 5000",
     "prepare": "yarn build"
   }
